# pcap-lens

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
sample_data/: demo.pcap
src/: config.py
src/analysis/: charts.py  compare.py  context.py  export.py  insights.py  summary.py
src/capture/: live_capture.py
src/core/: __init__.py  schemas.py  service.py
src/domain/: models.py
src/ingest/: upload.py
src/parser/: pcap_parser.py
src/transform/: filters.py  packet_table.py
src/ui/: i18n.py  live.py  pages.py  sections.py  settings.py
tests/: conftest.py  test_charts.py  test_compare.py  test_context.py  test_core_service.py  test_export.py  test_filters.py  test_insights.py  test_live_capture.py  test_parser.py  test_summary.py
