[project]
name = "pcap-insight"
version = "0.5.0"
description = "Upload pcap files and get instant traffic summaries and charts"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32.0",
    "scapy>=2.5.0",
    "polars>=0.20.0",
    "plotly>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
